SSCS-11878 Merge master and fix conflict